# projectV

./: CMakeLists.txt  README.md  main.cpp
bigcellgraph/: bigcellgraph.cpp  bigcellgraph.h
dcr/: dcr.cpp  dcr.h
dnn/: dnn.h  stupid_dnn.cpp  stupid_dnn.h
geometry/: geometry.cpp  geometry.h
voronoi_cell/: voronoi_cell.cpp  voronoi_cell.h
voronoi_graph/: voronoi_graph.cpp  voronoi_graph.h
voronoi_vertex/: voronoi_vertex.cpp  voronoi_vertex.h
yardtree/: yardtree.cpp  yardtree.h
